<resources>
    <string name="app_name">Ziplr</string>
    <string name="no_internet">No internet available.</string>
    <string name="use_your_mobile_number_to_continue">Use your mobile number to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registration">Registration</string>
    <string name="register_your_account_and_enjoy_our_app">Register your account and enjoy our app</string>
    <string name="hint_enter_your_name">Enter your name</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="hint_enter_confirm_password">Enter confirm password</string>
    <string name="submit">Submit</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_search_country">Search country</string>
    <string name="lbl_select_country_code">Select country code</string>
    <string name="validation_name">Please enter your name</string>
    <string name="validation_email">Please enter your valid email</string>
    <string name="validation_password">Please enter your password</string>
    <string name="validation_c_password">Please enter your confirm password</string>
    <string name="validation_password_match">The password and confirm password must be same</string>
    <string name="validation_country_code">Please choose your country code</string>
    <string name="validation_phone_no">Please enter your phone number</string>
    <string name="please_enter_your_mobile_number_and_verify_your_number">Please enter your mobile number and verify your number</string>
    <string name="uk_country_code">+44</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="next">Next</string>
    <string name="please_enter_your_password_and_quickly_to_manage_your_account">Please enter your password and quickly to manage your account</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_verification_code_received_on_your_phone_number">Enter verification code received on your phone number</string>
    <string name="resend_code">Resend Code</string>
    <string name="verification">Verification</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_a_new_password">Please enter a new password</string>
    <string name="hint_enter_new_password">Enter new password</string>
    <string name="validation_mobile_no">Please enter your mobile number</string>
    <string name="temporary_server_down">Something went wrong. Please check internet connection.</string>
    <string name="session_expired_please_login_again">Session expired please login again</string>
    <string name="validation_phone_no_length">Phone number must have 0 digits</string>
    <string name="validation_mobile_no_length">Mobile number must have 0 digits</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">Ok</string>
    <string name="alert_msg_not_registered">This mobile number is not registered with us!</string>
    <string name="alert_msg_not_verified">This mobile number is not verified yet!</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_verify">Verify</string>
    <string name="validation_new_password">Please enter your new password</string>
    <string name="validation_new_password_match">The new password and confirm password must be same</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_my_deliverys">My Delivery\'s</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_logout">Logout</string>
    <string name="hint_from">From</string>
    <string name="hint_to">To</string>
</resources>
