<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MobileNoActivity">

    <data>
        <variable
            name="MobileNoViewModel"
            type="com.mage.ziplrdelivery.viewmodel.MobileNoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/rlInternet"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_app_bar_height"
                android:theme="@style/ThemeOverlay.MaterialComponents.Light">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingTl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:fitsSystemWindows="true"
                    app:collapsedTitleGravity="left|start"
                    app:contentScrim="@color/white"
                    app:expandedTitleMarginBottom="@dimen/_5sdp"
                    app:expandedTitleMarginEnd="@dimen/_5sdp"
                    app:expandedTitleMarginStart="@dimen/_15sdp"
                    app:expandedTitleMarginTop="0dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                    app:scrimAnimationDuration="0">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/def_toolbar_height"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="ifContentScrolls"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mainCL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp">

                    <com.mage.ziplrdelivery.uc.CustomTextView
                        android:id="@+id/tvSubTitle"
                        style="@style/Form_SubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/please_enter_your_mobile_number_and_verify_your_number"
                        app:layout_constraintBottom_toTopOf="@+id/llCountryCode"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/llCountryCode"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvSubTitle">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivFlag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:visibility="gone"
                            app:srcCompat="@drawable/icn_down_arrow" />

                        <com.mage.ziplrdelivery.uc.CustomTextView
                            android:id="@+id/tvCode"
                            style="@style/TextView_Bold_Black_Big"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/text_black" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilMobilNo"
                        style="@style/Custom_TextInputLayout_Style"
                        android:layout_width="0dp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:hint="@string/mobile_number"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/llCountryCode">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edMobileNo"
                            style="@style/Custom_TextInputEditText_Style"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:maxLength="10"
                            android:text="@={MobileNoViewModel.PhoneNumber}"
                            app:custom_font="regular" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.mage.ziplrdelivery.uc.ProgressMaterialButton
                        android:id="@+id/btNext"
                        style="@style/ProgressMaterialButton_SemiBold_Orange"
                        android:layout_width="@dimen/def_bt_width"
                        android:layout_height="@dimen/def_bt_height"
                        android:layout_marginTop="@dimen/_45sdp"
                        app:bt_text="@string/next"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilMobilNo" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <RelativeLayout
            android:id="@+id/rlInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <include layout="@layout/layout_no_internet_available" />
        </RelativeLayout>

        <View
            android:id="@+id/nonClickable"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>